namespace MD.Character
{
    public static class AnimatorConstants
    {
        public const string HORIZONTAL = "Horizontal";
        public const string VERTICAL = "Vertical";
        public const string SPEED = "Speed";
        public const string LAST_X = "LastX";
        public const string LAST_Y = "LastY";
        public const string INVOKE_DIG = "InvokeDig";
        public const string IS_DIGGING = "IsDigging";
        public const string IS_HOLDING = "IsHolding";
    }
}